# MedMissingAI

./: .gitignore  README.md  project_plan.md  pyproject.toml
configs/: baseline.yaml  brats2021_smoke.yaml  data_local.yaml  data_server.yaml  model.yaml  train_local.yaml  train_server.yaml
configs/experiments/: README.md  model_missing_token.yaml  model_zero_fill_mask.yaml  train_server_balanced_seed42.yaml  train_server_balanced_seed43.yaml  train_server_balanced_seed44.yaml  train_server_dropout005_seed42.yaml  train_server_dropout005_seed43.yaml  train_server_dropout005_seed44.yaml  train_server_dropout010_seed42.yaml  train_server_dropout010_seed43.yaml  train_server_dropout010_seed44.yaml  train_server_dropout015_seed42.yaml  train_server_dropout015_seed43.yaml  train_server_dropout015_seed44.yaml  train_server_dropout020_seed42.yaml  train_server_dropout020_seed43.yaml  train_server_dropout020_seed44.yaml  train_server_dropout030_seed42.yaml  train_server_dropout030_seed43.yaml  train_server_dropout030_seed44.yaml  train_server_missing_token_seed42.yaml  train_server_missing_token_seed43.yaml  train_server_missing_token_seed44.yaml
data/: brats2021_manifest.csv  brats2021_manifest_smoke.csv  manifest_example.csv
scripts/: analyze_predictions.py  evaluate.py  export_predictions.py  make_dummy_manifest.py  predict.py  prepare_brats2021_manifest.py  run_dropout_grid_server.sh  summarize_experiment_matrix.py  train.py
src/medmissingai/: __init__.py
tests/: test_manifest.py  test_metrics.py  test_modality_settings.py  test_training_baselines.py
(+14 files in other folders)
