[project]
name = "medmissingai"
version = "0.1.0"
description = "Minimal PyTorch prototype for missing-modality medical image classification."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "openpyxl",
  "nibabel",
  "scikit-learn",
  "matplotlib",
  "pyyaml",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
